--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -52,8 +52,10 @@
 @mixin pt-6 { padding-top: 4rem !important; }
 @mixin pb-6 { padding-bottom: 4rem !important; }
 @mixin pl-2 { padding-left: .5rem !important; }
+@mixin pl-5 { padding-left: 3rem !important; }
 @mixin pl-6 { padding-left: 4rem !important; }
 @mixin pr-2 { padding-right: .5rem !important; }
+@mixin pr-5 { padding-right: 3rem !important; }
 @mixin pr-6 { padding-right: 4rem !important; }
 
 // Links
@@ -247,4 +249,10 @@
     }
   }
 
+}
+
+// Misc
+@mixin container-fluid-base {
+  @extend %container-fluid;
+  @extend %px-md-5;
 }
