redesign page headings

--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,6 +1,6 @@
 {% include page_header.html
-  header_title_class = 'page-header-title-2'
-  header_content_class = 'page-header-content-3'
+  header_class = 'page-header-2'
+  header_content_class = 'page-header-content-1'
 %}
 
 <div class="project-case-study">
