--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -93,6 +93,7 @@ $flush-mahogany: #cb333b;
 $honey-flower: #6d2077;
 
 // Font sizes
+$font-size-xxxxx-large: 3rem;
 $font-size-xxxx-large: 2.5rem;
 $font-size-xxx-large: 2rem;
 $font-size-xx-large: 1.75rem;
@@ -204,7 +205,7 @@ $text-link-hover-color: $text-link-color;
 $text-link-border: 1px dotted $text-link-color;
 $text-link-border-hover: 1px solid $text-link-hover-color;
 
-$header-display-1: 3.75rem;
+$header-display-1: 4rem;
 $header-display-2: 3rem;
 
 // Main nav
