--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -12,6 +12,8 @@
 %col-12 { @extend .col-12; }
 %col-sm-4 { @extend .col-sm-4; }
 %col-sm-6 { @extend .col-sm-6; }
+%col-sm-7 { @extend .col-sm-7; }
+%col-sm-8 { @extend .col-sm-8; }
 %col-sm-9 { @extend .col-sm-9; }
 %col-sm-10 { @extend .col-sm-10; }
 %col-sm-11 { @extend .col-sm-11; }
