Added grey left justified bullet styles

--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -87,5 +87,12 @@
     p {
       font-size: $font-size-x-small;
     }
+    li::before {
+      content: "";
+      display: inline;
+      width: 0;
+      margin-left: 0;
+      font-weight: normal;
+    }
   }
 }
