--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -307,3 +307,27 @@ $btn-share-color: $post-header-footer-color;
 $btn-share-bg: $white;
 $btn-share-border: $btn-share-color;
 $btn-share-active-color: $brand-primary;
+
+.left-justified-list{
+  ol,
+  ul,
+  dl {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    padding-inline-start: 20px;
+  }
+
+  ul {
+    list-style: none; /* Remove default bullets */
+  }
+
+  ul li::before {
+    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+    color: $gray-light; /* Change the color */
+    font-weight: bold; /* If you want it to be bold */
+    display: inline-block; /* Needed to add space between the bullet and the text */ 
+    width: 1em; /* Also needed for space (tweak if needed) */
+    margin-left: -1em; /* Also needed for space (tweak if needed) */
+  }
+  
+}
