--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -77,6 +77,7 @@
 %mb-md-4 { @extend .mb-md-4; }
 %mb-md-5 { @extend .mb-md-5; }
 %mb-lg-0 { @extend .mb-lg-0; }
+%ml-0 { @extend .ml-0; }
 %ml-2 { @extend .ml-2; }
 %ml-3 { @extend .ml-3; }
 %m-0 { @extend .m-0; }
@@ -91,6 +92,7 @@
 %pt-2 { @extend .pt-2; }
 %pt-4 { @extend .pt-4; }
 %pr-0 { @extend .pr-0; }
+%pr-2 { @extend .pr-2; }
 %pb-0 { @extend .pb-0; }
 %pb-2 { @extend .pb-2; }
 %pb-3 { @extend .pb-3; }
@@ -98,6 +100,8 @@
 %pb-5 { @extend .pb-5; }
 %pl-0 { @extend .pl-0; }
 %pl-1 { @extend .pl-1; }
+%pl-2 { @extend .pl-2; }
+%pl-3 { @extend .pl-3; }
 %p-0 { @extend .p-0; }
 %p-2 { @extend .p-2; }
 %p-3 { @extend .p-3; }
