--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -105,9 +105,9 @@
 
   &:focus {
     @if $enable-shadows {
-      box-shadow: $btn-box-shadow, 0 0 0 2px rgba($border, .5);
+      box-shadow: $btn-box-shadow, 0 0 0 2px rgba($active-color, .5);
     } @else {
-      box-shadow: 0 0 0 2px rgba($border, .5);
+      box-shadow: 0 0 0 2px rgba($active-color, .5);
     }
   }
 
