change cta button color

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -165,8 +165,8 @@ $input-color-placeholder: $gray-lighter;
 
 // Buttons
 $btn-primary-color: $white;
-$btn-primary-bg: $sk-green;
-$btn-primary-border: $sk-green;
+$btn-primary-bg: $sk-red;
+$btn-primary-border: $sk-red;
 
 $btn-secondary-color: $brand-primary;
 $btn-secondary-bg: $white;
