Restructed footer to be in columns

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,42 +2,86 @@
 
   <div class="footer-content">
     <div class="footer-row">
-      <div class="footer-brand-col">
-        <a href="/about/#hubzone">HUBZone Certified</a>
+      <div class="col-md-4">
+        <p class='footer-brand-col'>
+          <a href="/about/#hubzone">HUBZone Certified</a>
+        </p>
+        <div class="footer-contribute-cta-col">
+          <a href="{{site.github_issues_url}}" role="button" target="_blank">
+            Contribute to the site
+          </a>
+        </div>
       </div>
-
-      <nav class="footer-nav-col">
-        <ul>
-          <li><a href="/hire-us/">Hire Us</a></li>
-          <li><a href="/join/">Join Us</a></li>
-          <li><a href="/alliances/">Alliances</a></li>
-          <li><a href="/policies/">Policies</a></li>
+      <div class='col-md-2 footer-links-col'>
+        <h4><a href="/services/">Services</a></h4>
+        <ul class='list-unstyled'>
+          <li>
+            <a href="/services/digital-services-delivery/">Digital Services Delivery</a>
+          </li>
+          <li>
+            <a href="/services/digital-procurement/"> Digital Procurement</a>
+          </li>
+          <li>
+            <a href="/services/digital-transformation/">Digital Transformation</a>
+          </li>
+          <li>
+            <a href="/services/microconsulting/">Microconsulting</a>
+          </li>
         </ul>
-      </nav>
-    </div>
-
-    <div class="footer-row">
-      <div class="footer-contribute-cta-col">
-        <a href="{{site.github_issues_url}}" role="button" target="_blank">
-          Report a bug with the site
-        </a>
       </div>
 
-      <div class="footer-socials-col">
-        <a href="{{site.twitter_url}}" target="_blank">
-          <span class="sr-only">Twitter</span>
-          <i class="fa fa-2x fa-twitter" aria-hidden="true" title="Twitter"></i>
-        </a>
+      <div class='col-md-2 footer-links-col'>
+        <h4>Company</h4>
+        <ul class='list-unstyled'>
+          <li>
+            <a href="/about/#meet-the-team">Team</a>
+          </li>
+          <li>
+            <a href="/culture/">Culture</a>
+          </li>
+          <li>
+            <a href="">Alliances</a>
+          </li>
+          <li>
+            <a href="">Contract Vehicles</a>
+          </li>
+        </ul>
+      </div>
 
-        <a href="{{site.linkedin_url}}" target="_blank">
-          <span class="sr-only">LinkedIn</span>
-          <i class="fa fa-2x fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
-        </a>
+      <div class='col-md-2 footer-links-col'>
+        <h4>Resources</h4>
+        <ul class='list-unstyled'>
+          <li>
+            <a href="/blog/">Blog</a>
+          </li>
+          <li>
+            <a href="">Case Studies</a>
+          </li>
+          <li>
+            <a href="">Policies</a>
+          </li>
+        </ul>
+      </div>
 
-        <a href="{{site.github_repo_url}}" target="_blank">
-          <span class="sr-only">GitHub</span>
-          <i class="fa fa-2x fa-github" aria-hidden="true" title="GitHub"></i>
-        </a>
+      <div class='col-md-2 footer-links-col'>
+        <h4>Connect</h4>
+        <ul class='list-unstyled'>
+          <li>
+            <a href="{{site.github_repo_url}}">GitHub</a>
+          </li>
+          <li>
+            <a href="{{site.twitter_url}}">Twitter</a>
+          </li>
+          <li>
+            <a href="{{site.linkedin_url}}">LinkedIn</a>
+          </li>
+          <li>
+            <a href="/work/carrot/">Carrot</a>
+          </li>
+          <li>
+            <a href="/hire-us/">Hire Us</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
