--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -116,6 +116,7 @@
 %py-3 { @extend .py-3; }
 %py-4 { @extend .py-4; }
 %py-md-5 { @extend .py-md-5; }
+%py-md-2 { @extend .py-md-2; }
 
 %jumbotron { @extend .jumbotron; }
 %jumbotron-fluid { @extend .jumbotron-fluid; }
