turn notice bar into hiring notice

--- a/_includes/notice_bar.html
+++ b/_includes/notice_bar.html
@@ -1,8 +1,10 @@
 <div class="notice-bar">
   <div class="notice-bar-row">
     <div class="notice-bar-col">
-      <i class="fa fa-building-o" aria-hidden="true" title="Building Icon"></i>
-      <span>A certified HUBZone company</span>
+      <a href="/join/">
+        <span>We're looking to hire great designers, engineers, and more!</span>
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </a>
     </div>
   </div>
 </div>
