--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -78,12 +78,14 @@
 %mb-md-5 { @extend .mb-md-5; }
 %mb-lg-0 { @extend .mb-lg-0; }
 %ml-0 { @extend .ml-0; }
+%ml-1 { @extend .ml-1; }
 %ml-2 { @extend .ml-2; }
 %ml-3 { @extend .ml-3; }
 %m-0 { @extend .m-0; }
 %mx-0 { @extend .mx-0; }
 %mx-2 { @extend .mx-2; }
 %mx-1 { @extend .mx-1; }
+%my-2 { @extend .my-2; }
 %my-3 { @extend .my-3; }
 %my-4 { @extend .my-4; }
 %my-5 { @extend .my-5; }
