--- a/_sass/layout/_cta.scss
+++ b/_sass/layout/_cta.scss
@@ -5,7 +5,7 @@
   @extend %py-4;
   @extend %py-md-5;
   color: $page-cta-color;
-  background-image: linear-gradient(-90deg, #003d58, #0073a4);
+  background-image: $page-cta-bg-color;
 }
 
 .page-subfooter-content {
