--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -113,7 +113,7 @@ $gray-light: lighten($gray, 10%);
 $gray-lighter: lighten($gray, 30%);
 $gray-lightest: lighten($gray, 50%);
 
-$brand-primary: darken($sk-blue, 5%);
+$brand-primary: darken($sk-blue, 7%);
 $brand-success: $sk-green;
 $brand-info: $sk-blue;
 $brand-warning: $sk-yellow;
@@ -205,7 +205,7 @@ $notice-bar-link-color: $white;
 $notice-bar-link-hover-color: lighten($sk-red, 25%);
 $notice-bar-link-border: none;
 $notice-bar-link-border-hover: none;
-$notice-bar-bg-color: linear-gradient(90deg, darken($sk-red, 5%), darken($sk-red, 15%));
+$notice-bar-bg-color: darken($sk-red, 5%);
 
 // Main nav
 $nav-brand-width-sm-down: 150px;
