Made social accordian buttons

--- a/_includes/apply_form.html
+++ b/_includes/apply_form.html
@@ -1,4 +1,4 @@
-<form accept-charset="UTF-8" action="https://formkeep.com/f/24550e06a886" method="POST">
+<form accept-charset="UTF-8" action="https://formkeep.com/f/24550e06a886" method="POST" class='join-us-form'>
   <input type="hidden" name="utf8" value="✓">
 
   <fieldset class="form-group">
@@ -73,53 +73,53 @@
       </legend>
 
       <div class="form-icons">
-        <div role="button" data-toggle="github-toggle" aria-controls="github-toggle" aria-expanded="false">
+        <button class='social-button collapsed' type='button' role="button" data-target="#github-toggle" data-toggle='collapse' aria-controls="github-toggle" aria-expanded="false" tabindex="0">
           <span class="sr-only">Toggle GitHub Form Input Field</span>
           <i class="fa fa-github fa-2x" title="GitHub" aria-hidden="true"></i>
-        </div>
+        </button>
 
-        <div role="button" data-toggle="linkedin-toggle" aria-controls="linkedin-toggle" aria-expanded="false">
+        <button class='social-button collapsed' type='button' role="button" data-target="#linkedin-toggle" data-toggle='collapse' aria-controls="linkedin-toggle" aria-expanded="false" tabindex="0">
           <span class="sr-only">Toggle LinkedIn Form Input Field</span>
           <i class="fa fa-linkedin fa-2x" title="LinkedIn" aria-hidden="true"></i>
-        </div>
+        </button>
 
-        <div role="button" data-toggle="medium-toggle" aria-controls="medium-toggle" aria-expanded="false">
+        <button class='social-button collapsed' type='button' role="button" data-target="#medium-toggle" data-toggle='collapse' aria-controls="medium-toggle" aria-expanded="false" tabindex="0">
           <span class="sr-only">Toggle Medium Form Input Field</span>
           <i class="fa fa-medium fa-2x" title="Medium" aria-hidden="true"></i>
-        </div>
+        </button>
 
-        <div role="button" data-toggle="dribbble-toggle" aria-controls="dribbble-toggle" aria-expanded="false">
+        <button class='social-button collapsed' type='button' role="button" data-target="#dribbble-toggle" data-toggle='collapse' aria-controls="dribbble-toggle" aria-expanded="false" tabindex="0">
           <span class="sr-only">Toggle Dribbble Form Input Field</span>
           <i class="fa fa-dribbble fa-2x" title="Dribbble" aria-hidden="true"></i>
-        </div>
+        </button>
 
-        <div role="button" data-toggle="website-toggle" aria-controls="website-toggle" aria-expanded="false">
+        <button class='social-button collapsed'  role="button" data-target="#website-toggle" data-toggle='collapse' aria-controls="website-toggle" aria-expanded="false" tabindex="0">
           <span class="sr-only">Toggle Personal Website Form Input Field</span>
           <i class="fa fa-home fa-2x" title="Personal Website" aria-hidden="true"></i>
-        </div>
+        </button>
       </div>
 
-      <div id="github-toggle" class="form-group sr-only">
+      <div id="github-toggle" class="form-group collapse">
         <label for="github-input">GitHub</label>
         <input id="github-input" class="form-control" type="text" placeholder="https://github.com/oliviajones" name="github">
       </div>
 
-      <div id="linkedin-toggle" class="form-group sr-only">
+      <div id="linkedin-toggle" class="form-group collapse">
         <label for="linkedin-input">LinkedIn</label>
         <input id="linkedin-input" class="form-control" type="text" placeholder="https://linkedin.com/in/oliviajones" name="linkedin">
       </div>
 
-      <div id="medium-toggle" class="form-group sr-only">
+      <div id="medium-toggle" class="form-group collapse">
         <label for="medium-input">Medium</label>
         <input id="medium-input" class="form-control" type="text" placeholder="https://medium.com/@oliviajones" name="medium">
       </div>
 
-      <div id="dribbble-toggle" class="form-group sr-only">
+      <div id="dribbble-toggle" class="form-group collapse">
         <label for="dribbble-input">Dribbble</label>
         <input id="dribbble-input" class="form-control" type="text" placeholder="https://dribbble.com/oliviajones" name="dribble">
       </div>
 
-      <div id="website-toggle" class="form-group sr-only">
+      <div id="website-toggle" class="form-group collapse">
         <label for="website-input">Personal website</label>
         <input id="website-input" class="form-control" type="text" placeholder="https://oliviajones.me/" name="website">
       </div>
