Hide focus on click

--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -96,6 +96,10 @@
     border: none;
     &:active{
       border: none;
+      outline: none;
+    }
+    &:hover{
+      box-shadow: none;
     }
     &:hover i{
       color: $form-icon-hover-color;
