--- a/_includes/apply_form.html
+++ b/_includes/apply_form.html
@@ -73,27 +73,27 @@
       </legend>
 
       <div class="form-icons">
-        <button class='social-button btn collapsed' type='button' role="button" data-target="#github-toggle" data-toggle='collapse' aria-controls="github-toggle" aria-expanded="false" tabindex="0">
+        <button class='social-button btn collapsed' type='button' role="button" data-target="#github-toggle" data-toggle='collapse' aria-controls="github-toggle" aria-expanded="false" tabindex="0" onclick="this.blur();">
           <span class="sr-only">Toggle GitHub Form Input Field</span>
           <i class="fa fa-github fa-2x" title="GitHub" aria-hidden="true"></i>
         </button>
 
-        <button class='social-button btn collapsed' type='button' role="button" data-target="#linkedin-toggle" data-toggle='collapse' aria-controls="linkedin-toggle" aria-expanded="false" tabindex="0">
+        <button class='social-button btn collapsed' type='button' role="button" data-target="#linkedin-toggle" data-toggle='collapse' aria-controls="linkedin-toggle" aria-expanded="false" tabindex="0" onclick="this.blur();">
           <span class="sr-only">Toggle LinkedIn Form Input Field</span>
           <i class="fa fa-linkedin fa-2x" title="LinkedIn" aria-hidden="true"></i>
         </button>
 
-        <button class='social-button btn collapsed' type='button' role="button" data-target="#medium-toggle" data-toggle='collapse' aria-controls="medium-toggle" aria-expanded="false" tabindex="0">
+        <button class='social-button btn collapsed' type='button' role="button" data-target="#medium-toggle" data-toggle='collapse' aria-controls="medium-toggle" aria-expanded="false" tabindex="0" onclick="this.blur();">
           <span class="sr-only">Toggle Medium Form Input Field</span>
           <i class="fa fa-medium fa-2x" title="Medium" aria-hidden="true"></i>
         </button>
 
-        <button class='social-button btn collapsed' type='button' role="button" data-target="#dribbble-toggle" data-toggle='collapse' aria-controls="dribbble-toggle" aria-expanded="false" tabindex="0">
+        <button class='social-button btn collapsed' type='button' role="button" data-target="#dribbble-toggle" data-toggle='collapse' aria-controls="dribbble-toggle" aria-expanded="false" tabindex="0" onclick="this.blur();">
           <span class="sr-only">Toggle Dribbble Form Input Field</span>
           <i class="fa fa-dribbble fa-2x" title="Dribbble" aria-hidden="true"></i>
         </button>
 
-        <button class='social-button btn collapsed'  role="button" data-target="#website-toggle" data-toggle='collapse' aria-controls="website-toggle" aria-expanded="false" tabindex="0">
+        <button class='social-button btn collapsed'  role="button" data-target="#website-toggle" data-toggle='collapse' aria-controls="website-toggle" aria-expanded="false" tabindex="0" onclick="this.blur();">
           <span class="sr-only">Toggle Personal Website Form Input Field</span>
           <i class="fa fa-home fa-2x" title="Personal Website" aria-hidden="true"></i>
         </button>
